Prevent body from getting too small.

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@ html {
 body {
 	margin: 40px auto;
 	max-width: 700px;
+	width: 90%;
 	color: #222;
 	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 	font-size: 1em;
